--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -1,6 +1,6 @@
 .photo-list__item {
   margin: 24px;
-  padding: 8px;
+  padding: 16px 16px 16px 16px;
   border-width: 0.5px;
   border-color: lightgray;
   border-style: solid;
